[workspace]
members = [
    "glasses",
    "grapes",
]

[package]
name = "boom-broom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.16.0"
rstar = "0.9.3"
glasses = { path = "./glasses"}
grapes = { path = "./grapes"} #todo move this to a git repo and have it be imported via { git="" }


[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]