[workspace]
members = [
    "rusty_glasses",
]

[package]
name = "boom-broom"
version = "0.1.0"
edition = "2021"

[build]
target = ["x86_64-pc-windows-gnu", "x86_64-unknown-linux-gnu"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-args = "0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.16.0"
ron = "0.8.0"
rstar = "0.9.3"
rusty_glasses = { path = "./rusty_glasses"}
serde = {version = "1.0.152", features = ["derive"]}
parking_lot = "0.12.1"
rand = "0.8.5"
fastrand = "1.8.0"
ran = "1.0.7"
nanorand = "0.7.0"
pico-args = "0.5.0"


[dependencies.sdl2]
version = "0.35.2"
default-features = false
#features = ["image"]